# meeting-recorder

./: .gitignore  LICENSE  PKGBUILD  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/: meeting-recorder.desktop
db/: checksums.db  packages.db  references.db  release.caches.db
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
docs/: recovering-corrupted-screen-recordings.md
packaging/DEBIAN/: postinst  postrm
pool/main/m/meeting-recorder/: meeting-recorder_1.0.3_all.deb
src/meeting_recorder/: app.py
src/meeting_recorder/audio/: devices.py  mixer.py  recorder.py
src/meeting_recorder/config/: defaults.py  settings.py
src/meeting_recorder/detection/: audio_watcher.py  call_detector.py
src/meeting_recorder/platform/: registry.py
src/meeting_recorder/platform/audio/: pipewire.py
src/meeting_recorder/platform/screen/: gpu_screen_recorder.py
src/meeting_recorder/processing/: pipeline.py  summarization.py  transcription.py
src/meeting_recorder/processing/providers/: gemini.py  whisper.py
src/meeting_recorder/ui/: main_window.py  notifications.py  settings_dialog.py  tray.py
src/meeting_recorder/ui/settings/: general_tab.py  platform_tab.py
src/meeting_recorder/utils/: autostart.py  filename.py  glib_bridge.py
tests/: conftest.py
tests/platform/screen/: test_gpu_screen_recorder.py
