[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-recorder"
version = "2.0.0"
description = "Record, transcribe and summarize meetings with AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AJV009" }]
dependencies = [
    "google-genai>=0.8.0",
    "setproctitle>=1.3.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "faster-whisper>=1.1.0",
    "litellm",
    "elevenlabs>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[project.scripts]
meeting-recorder = "meeting_recorder.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meeting_recorder = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
